src/objects/FieldExperience__c.object
<CustomObject>
    <fields>
        <fullName>MenRecNeedsTSReview__c</fullName>
        <description>Set for Teacher Success to review the student due to low marks by mentor.</description>
        <label>MenRec Needs TS Review</label>
        <picklist>
            <picklistValues>
                <fullName>Needs TS Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecPresentsWillingnessSolve__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Presents Willingness Solve</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecProficientInUseOfTechnology__c</fullName>
        <inlineHelpText>Highly proficient in the use of technology as both a pedagogical and management tool.</inlineHelpText>
        <label>MenRec Proficient in Use of Technology</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecProjectsVoiceAppropriately__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Projects Voice Appropriately</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecReasonNoRecommend__c</fullName>
        <description>Reason why the mentor does not recommend the student for DT, if NO</description>
        <label>MenRec Reason No Recommend</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MenRecRecommendationDate__c</fullName>
        <description>Date the mentor recommended the student for DT.</description>
        <label>MenRec Recommendation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MenRecShowsConcernCaringCompassion__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Shows Concern Caring Compassion</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecShowsInterestandEnthusiasm__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Shows Interest and Enthusiasm</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecShowsRespect__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Shows Respect</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecShowsSensitivity__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Shows Sensitivity</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecShowsTolerance__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Shows Tolerance</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecShowsWillingnesstoLearn__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Shows Willingness to Learn</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Unacceptable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Needs improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3=Meets standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4=Exemplary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecUsesAppropriateSyntax__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Uses Appropriate Syntax</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecUsesAppropriateWords__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Uses Appropriate Words</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecUsesRespectfulLanguage__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Uses Respectful Language</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecUsesVoiceInflection__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Uses Voice Inflection</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecUsesandAcceptsHumor__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Uses and Accepts Humor</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecWearsSuitableClothing__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Wears Suitable Clothing</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenRecWorksCooperatively__c</fullName>
        <description>Mentor evaluation of student/teacher candidate.</description>
        <label>MenRec Works Cooperatively</label>
        <picklist>
            <picklistValues>
                <fullName>0=Not Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Needs Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Meets Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MentorEmailAddress__c</fullName>
        <description>Email address formula from mentor relationship field</description>
        <formula>Mentor__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mentor Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MentorSFID__c</fullName>
        <formula>Student__r.Mentor__r.Id</formula>
        <label>MentorSFID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mentor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The mentor working with the student that is applying for PCE and DT.</description>
        <label>Mentor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FieldExperiences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NCSSFinal__c</fullName>
        <label>NCSS Final</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NCSSMidterm__c</fullName>
        <label>NCSS Midterm</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NewDomain__c</fullName>
        <formula>if (value(Student__r.ProgramCatalogTerm__c) &gt;=201308 &amp;&amp; Student__r.ProgramCode__c &lt;&gt; &apos;MEDECE&apos; &amp;&amp; Student__r.ProgramCode__c &lt;&gt; &apos;BAECE&apos;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Domain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NotPCEReason__c</fullName>
        <description>reason why the student is chosing a DT school that is different from PCE</description>
        <label>Not PCE Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NumberOfDaysSinceLastBCReview__c</fullName>
        <description>The number of days since the Background Check was last reviewed.</description>
        <formula>TODAY() -  BackgroundCheckLastReviewed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days Since Last BC Review</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfDaysUntilBCExpiration__c</fullName>
        <description>The number of days until the background clearance expires.</description>
        <formula>BackgroundClearanceExpirationDate__c  -  TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days Until BC Expiration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofWithdrawls__c</fullName>
        <formula>Student__r.NumberofFEAppWithdrawn__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Withdrawls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObservationCSFinalComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the final observation has been submitted by the Clinical Supervisor</description>
        <inlineHelpText>Whether or not the final observation has been submitted by the Clinical Supervisor</inlineHelpText>
        <label>Observation CS Final Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ObservationCSMidtermComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the midterm is complete</description>
        <label>Observation CS Midterm Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ObservationChecklist__c</fullName>
        <label>Observation Checklist</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ObservationFinalStatus__c</fullName>
        <label>Observation Final Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ObservationHTFinalComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the host teacher has completed the final evaluation</description>
        <inlineHelpText>Whether or not the host teacher has completed the final evaluation</inlineHelpText>
        <label>Observation HT Final Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ObservationHTMidtermComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the host teacher has submitted the midterm assessment</description>
        <inlineHelpText>Whether or not the host teacher has submitted the midterm assessment</inlineHelpText>
        <label>Observation HT Midterm Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ObservationMaxNumber__c</fullName>
        <description>The highest number of observation completed excluding midterm and Final</description>
        <inlineHelpText>The highest number of observation completed excluding midterm and Final</inlineHelpText>
        <label>Observation Max Number</label>
        <summarizedField>FieldExperienceProcess__c.ObservationNum__c</summarizedField>
        <summaryFilterItems>
            <field>FieldExperienceProcess__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Observation</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>FieldExperienceProcess__c.ObservationStatus__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>FieldExperienceProcess__c.ObservationMainType__c</field>
            <operation>equals</operation>
            <value>Observation</value>
        </summaryFilterItems>
        <summaryForeignKey>FieldExperienceProcess__c.FieldExperience__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Other_Requirements__c</fullName>
        <description>Additional requirements that are not required for every student. This field is for Placement Specialist tracking as needed. Not for reporting purposes</description>
        <label>Other Requirements</label>
        <picklist>
            <picklistValues>
                <fullName>District Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DoD Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOE Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Residency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Board Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Seminar or Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Teaching License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TB Results</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drug Screen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Badge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confidentiality Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OSHA</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PCEApprovedEmailSent__c</fullName>
        <label>PCE Approved Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PCECallAttendedDate__c</fullName>
        <description>date the student attended the pce group call</description>
        <label>PCE Presentation Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PCEFormVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PCE Form Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCEPhaseStatus__c</fullName>
        <description>Status of Pre Clinical Experiences (PCE) application</description>
        <inlineHelpText>PCE Approved = Approved to go into classroom
PCE Pending = One of selected schools require WGU to do placement.</inlineHelpText>
        <label>PCE Phase Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PCE Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCE Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCE Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCEState__c</fullName>
        <description>State/s a student will be physically doing (PCE) Pre-Clinical Experiences</description>
        <inlineHelpText>KY is ok for PCE</inlineHelpText>
        <label>PCE State</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DoD AA - Armed Forces America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DoD AE - Armed Forces Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DoD AP - Armed Forces Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PCETaskListUploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator that the PCETaskList was uploaded by the student</description>
        <label>PCE TaskList/Obs Log Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCETaskListVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator that the PCETaskList Upload has been verified</description>
        <label>PCE TaskList/Obs Log Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCEVerificationFormUploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a hidden checkbox used to manage the student-facing tasks.</description>
        <label>PCE Verification Form Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PPPModule1CompletedDate__c</fullName>
        <label>PPP Module 1 Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PPPModule2CompletedDate__c</fullName>
        <label>PPP Module 2 Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PPPModule3CompletedDate__c</fullName>
        <label>PPP Module 3 Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlacedDistrict__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Placed District</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Field Experiences (District)</relationshipLabel>
        <relationshipName>DistrictFieldExperiences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PlacedSchool__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Placed School</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Field Experiences</relationshipLabel>
        <relationshipName>SchoolFieldExperiences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PlacementComplete__c</fullName>
        <label>Placement Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlacementSpecialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Placement Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FieldExperiencesUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReasonNotClearforDT__c</fullName>
        <label>Reason Not Clear for DT</label>
        <picklist>
            <picklistValues>
                <fullName>Clearance Expires Before DT End Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT End Date is Not Yet Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Must Order USOE Background Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student teaching permit needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs WA Pre-Res</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs DOE Clearance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs State Background Check</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReasonNote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reason Note</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Field Experiences</relationshipLabel>
        <relationshipName>FieldExperiences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReasonforWithdrawalorDenial__c</fullName>
        <label>Reason for Withdrawal or Denial</label>
        <picklist>
            <picklistValues>
                <fullName>Academic-can&apos;t pass content exam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic-decided not to teach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic-didn&apos;t meet audit requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic-didn&apos;t meet final requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic-not making sufficient progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic-other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial-can&apos;t afford DT fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial-can&apos;t afford to not work during DT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial-can&apos;t afford tuition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial-other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial-spouse lost job</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other-did not meet admission requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other-no placement available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other-not satisfied with placement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal-childcare problems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal-chose alternate route to licensure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal-family member ill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal-illness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal-moving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal-other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS Approved Withdrawal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registeredonorbeforerequireddate__c</fullName>
        <label>Registered on or before required date</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RelativesinDistrict__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does student have a relative in the district requested for DT?</description>
        <label>Relatives in District</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequiredContentExams__c</fullName>
        <description>List of required content exams for this student, this program for this cohort.</description>
        <inlineHelpText>Current required content exams.</inlineHelpText>
        <label>Required Content Exams</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SFAWPassed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SFAW Passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFAWReminder__c</fullName>
        <description>Date email was sent reminding student to complete the SFAW assessment</description>
        <label>SFAW Reminder</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SameSchoolasPCE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same School as PCE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SchoolNameChildrenAreIn__c</fullName>
        <description>Name of the school the student&apos;s children attend.</description>
        <label>School Name Children Are In</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchoolOK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Application Review Checklist, school has been chose and is appropriate grades for program</description>
        <label>School(s) OK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SplitPlacement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Split Placement</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>